# api/api-presentation-quarkus/src/main/kotlin/fr/geoffreyCoulaud/pinryReborn/api/presentation/quarkus/dtos/output/DownloadStatusDto.kt
@@ -1,0 +1,6 @@
+package fr.geoffreyCoulaud.pinryReborn.api.presentation.quarkus.dtos.output
+
+enum class DownloadStatusDto {
+    PENDING,
+    FAILED,
+}
