# api/api-presentation-quarkus/src/main/kotlin/fr/geoffreyCoulaud/pinryReborn/api/presentation/quarkus/dtos/output/PinImageStateDto.kt
@@ -1,7 +1,7 @@
 package fr.geoffreyCoulaud.pinryReborn.api.presentation.quarkus.dtos.output
 
 data class PinImageStateDto(
-    val status: String,
+    val status: PinImageStatusDto,
     val url: String? = null,
     val mimeType: String? = null,
     val width: Int? = null,
@@ -11,5 +11,9 @@ data class PinImageStateDto(
     val message: String? = null,
     val replacement: ReplacementDto? = null,
 ) {
-    data class ReplacementDto(val status: String, val reasonCode: String? = null, val message: String? = null)
+    data class ReplacementDto(
+        val status: DownloadStatusDto,
+        val reasonCode: String? = null,
+        val message: String? = null,
+    )
 }
