# api/api-presentation-quarkus/src/main/kotlin/fr/geoffreyCoulaud/pinryReborn/api/presentation/quarkus/dtos/output/PinImageStatusDto.kt
@@ -1,0 +1,8 @@
+package fr.geoffreyCoulaud.pinryReborn.api.presentation.quarkus.dtos.output
+
+enum class PinImageStatusDto {
+    NONE,
+    PENDING,
+    READY,
+    FAILED,
+}
